name:                md5
version:             0.1.0.0
synopsis:            My implementation of md5 as an exercise for a cryptography university course
description:         Please see README
homepage:            https://github.com/githubuser/md5#readme
license:             MIT
license-file:        LICENSE
author:              Alexey Kutepov
maintainer:          reximkut@gmail.com
copyright:           2016 Alexey Kutepov
category:            Cryptography
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MD5
  build-depends:       base >= 4.7 && < 5, bytestring, split
  default-language:    Haskell2010

test-suite md5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , md5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/md5
